# neuralib

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-document.txt  requirements-optional.txt  requirements.txt  ruff.toml
.github/workflows/: coverage.yml  python-publish.yml  python-unittest.yaml
doc/: gen_api.py
doc/source/: conf.py  index.rst  installation.rst  roadmap.rst
doc/source/api/: future_plan.rst  neuralib.argp.core.rst  neuralib.argp.dispatch.rst  neuralib.argp.rst  neuralib.argp.validator.rst  neuralib.atlas.allen.rst  neuralib.atlas.brainrender.core.rst  neuralib.atlas.brainrender.example.rst  neuralib.atlas.brainrender.main_app.rst  neuralib.atlas.brainrender.probe.rst  neuralib.atlas.brainrender.probe_rst.rst  neuralib.atlas.brainrender.roi.rst  neuralib.atlas.brainrender.roi_rst.rst  neuralib.atlas.brainrender.rst  neuralib.atlas.brainrender.util.rst  neuralib.atlas.ccf.classifier.rst  neuralib.atlas.ccf.core.rst  neuralib.atlas.ccf.dataframe.rst  neuralib.atlas.ccf.matrix.rst  neuralib.atlas.ccf.norm.rst  neuralib.atlas.ccf.query.rst  neuralib.atlas.ccf.rst  neuralib.atlas.cellatlas.core.rst  neuralib.atlas.cellatlas.rst  neuralib.atlas.data.rst  neuralib.atlas.ibl.example.rst  neuralib.atlas.ibl.plot.rst  neuralib.atlas.ibl.rst  neuralib.atlas.map.rst  neuralib.atlas.plot.rst  neuralib.atlas.rst  neuralib.atlas.type.rst  neuralib.atlas.typing.rst  neuralib.atlas.util.rst  neuralib.atlas.view.rst  neuralib.bokeh_model.base.rst  neuralib.bokeh_model.example.model.rst  neuralib.bokeh_model.example.rst  neuralib.bokeh_model.example.view_all.rst  neuralib.bokeh_model.example.view_animal.rst  (+235 more)
doc/source/atlas/: allen_tree.rst  brainrender.rst  ccf_dataframe.rst  cell_atlas.rst  index.rst
doc/source/imaging/: index.rst  scanbox.rst  spikes.rst  suite2p.rst  widefield.rst
doc/source/notebooks/: example_argp.ipynb  example_calimg.ipynb  example_facemap.ipynb  example_ibl_plot.ipynb  example_imaging_2p.ipynb  example_neuralib_plot.ipynb  example_rastermap.ipynb  example_rastermap_2p.ipynb  example_rastermap_wfield.ipynb  example_segmentation.ipynb  example_slice_view.ipynb
doc/source/other/: index.rst  locomotion.rst  model.rst  morpho.rst  scan.rst  segmentation.rst  tracking.rst
doc/source/util/: dashboard.rst  imglib.rst  index.rst  io.rst  persistence.rst  plot.rst  sqlp.rst  tool.rst
notebooks/: example_facemap.ipynb  example_rastermap_2p.ipynb  example_slice_view.ipynb
src/neuralib/argp/: __init__.py  _type.py  _validator.py  core.py  dispatch.py  validator.py
src/neuralib/atlas/: _deprecate.py  _structure.py  allen.py  data.py  map.py  plot.py  type.py  typing.py  util.py  view.py
src/neuralib/bokeh_model/: __init__.py  base.py  example.py  example_multi.py  util.py  view_brain.py
src/neuralib/calimg/: cellular.py  fov.py
src/neuralib/dashboard/: base.py  example.py  example_multi.py  tool.py  view_brain.py
src/neuralib/glx/: allocator.py  array.py  base.py  catgt.py  processor.py  spikeglx.py
src/neuralib/imaging/: __init__.py  cellular.py
src/neuralib/imglib/: array.py  color.py  factory.py  io.py  labeller.py  norm.py  transform.py  util.py
src/neuralib/io/: __init__.py  core.py  csv.py  csv_header.py  dataset.py  json.py  output.py  pyh5.py
src/neuralib/kilosort/: cluster_data.py  cluster_info.py  files.py  params.py  result.py
src/neuralib/locomotion/: __init__.py  epoch.py  position.py
src/neuralib/morpho/: __init__.py  swc.py
src/neuralib/persistence/: __init__.py  cli_persistence.py  cli_presistence.py  persistence.py  validator.py  verbose.py
src/neuralib/plot/: __init__.py  _dotplot.py  animation.py  colormap.py  figure.py  misc.py  plot.py  psth.py  setting.py  tools.py  venn.py
src/neuralib/scan/: __init__.py  core.py  czi.py  lsm.py
src/neuralib/scanner/: __init__.py  core.py  czi.py  lsm.py
src/neuralib/segmentation/: __init__.py  _base.py  base.py
src/neuralib/signal/: interp.py  segement.py
src/neuralib/sqlp/: __init__.py  __main__.py  alter.py  annotation.py  cli.py  connection.py  dot.py  expr.py  func.py  func_date.py  func_dec.py  func_stat.py  func_win.py  literal.py  stat.py  stat_start.py  table.py  table_nt.py  util.py
src/neuralib/stimpy/: __init__.py  baselog.py  baseprot.py  camlog.py  event.py  math_eval.py  preference.py  protocol.py  protocol_parser.py  replay.py  session.py  stimpy_core.py  stimpy_git.py  stimpy_pyv.py  stimulus.py  util.py
src/neuralib/tools/: __init__.py  gspread.py  slack_bot.py
src/neuralib/tracking/: __init__.py
src/neuralib/typing/: __init__.py  alias.py  func.py
src/neuralib/util/: cli_args.py  color_logging.py  csv.py  dataframe.py  deprecation.py  func.py  gpu.py  interp.py  io.py  json.py  logging.py  profile.py  profile_test.py  segement.py  segments.py  tqdm.py  unstable.py  util_class.py  util_clazz.py  util_cv2.py  util_h5py.py  util_polars.py  util_type.py  util_verbose.py  utils.py  verbose.py  version.py
src/neurolib/argp/: _type.py  dispatch.py
src/neurolib/persistence/: __init__.py  persistence.py  verbose.py
src/neurolib/plot/: __init__.py  (+2 more)
test/: test_argp.py  test_argp_dispatch.py  test_camlog_parser.py  test_csv_context_manager.py  test_gspread.py  test_persistence.py  test_persistence_autoinc.py  test_plot.py  test_protocol_parser.py  test_pyvlog_parser.py  test_pyvprot_parser.py  test_pyvstim_parser.py  test_stimpy_bitbucket_parser.py  test_stimpy_github_parser.py  test_stimpy_pref.py  test_util_func.py
test/_manual/: test_atlas.py  test_brainrender.py  test_calimg_spike.py  test_gspread.py  test_image_factory.py
test/_unittest/: test_calimg_spike.py  test_h5py.py  test_io.py  test_plot.py  test_segments.py  test_util_polars.py  test_utils.py
test/argp/: test_argp_dispatch.py
test/glx/: test_allocator.py  test_processor.py
test/manual/: test_argp_dispatch.py
test/sqlp/: _test.py  _tracks.py  test.py  test_change.py  test_func.py  test_join.py  test_sqlp.py  test_sqlp_stat.py
test/unit/: .coveragerc
(+204 files in other folders)
