[project]
name = "neura-library"
version = "0.5.1"
requires-python = ">=3.10"
description = "Utility tools for system neuroscience research, including Open Source Wrapper or Parser"
authors = [
    { name = "Yu-Ting Wei", email = "ytsimon2004@gmail.com" },
    { name = "Ta-Shun Su", email = "antoniost29@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["Neuroscience", "visual neuroscience", "cellular imaging", "brain mapping", "spatial navigation"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    'Intended Audience :: Science/Research',
    "Typing :: Typed",
]

# -----------------------------------------------------------------------------
# Installation
# -----------------------------------------------------------------------------

dependencies = [
    "attrs",
    "argclz",
    "colorama",
    "colorlog",
    "matplotlib",
    "matplotlib_venn",
    "seaborn",
    "numpy",
    "scipy",
    "scikit-image",
    "pandas",
    "polars",
    "pyarrow",
    "tifffile",
    "opencv-python>=4.8.0.76",
    "tqdm",
    "requests",
    'gdown',
    "rich",
    "h5py",
    "typing_extensions",
]


[project.optional-dependencies]

# -----------------------------------------------------------------------------
# As module name (isolated wrapper)
# -----------------------------------------------------------------------------

atlas = [
    "brainrender",
    'pynrrd',
    "openpyxl",
    "anytree",
    "plotly",
    "fastexcel"
]
scan = ["xmltodict", "aicspylibczi"]
imaging = [
    "sbxreader",
    "ruamel.yaml",
    "numba", # oasis dcnv batch processing
    "bokeh", # fft view
    "napari"  # align
]
imglib = ["pdf2image", "imageio"]


# -----------------------------------------------------------------------------
# As functionality (isolated wrapper)
# -----------------------------------------------------------------------------

rastermap = ["rastermap"]
cascade = ["tensorflow"]
segmentation = ["pyqt6", "pyqtgraph", "csbdeep", "roifile", "napari"]
stardist = ["neura-library[segmentation]", "stardist", "tensorflow", "numpy<2.0; extra == 'stardist'"]
opt = ["slackclient", "gspread", "psutil"]

#
all = [
    # as module
    "neura-library[atlas]",
    "neura-library[scan]",
    "neura-library[imaging]",
    "neura-library[imglib]",
    # as functionality
    "neura-library[rastermap]",
    "neura-library[opt]",
]

dev = [
    "neura-library[all]", "neura-library[stardist]",
    "pre-commit", "ruff", "pytest", "pytest-cov"
]

doc = [
    "neura-library[all]",
    "neura-library[stardist]",
    "neura-library[cascade]",
    "sphinx", "nbsphinx", "sphinx-toolbox", "sphinx-rtd-theme", "sphinx-prompt", "sphinx_copybutton"
]

# -----------------------------------------------------------------------------
# Testing and Coverage Configuration
# -----------------------------------------------------------------------------

[tool.coverage.run]
source = ["neuralib"]
omit = [
    "*/neuralib/io/dataset/*",
    "*/neuralib/locomotion/*",
    "*/neuralib/segmentation/*",
    "*/neuralib/model/*",
    "*/neuralib/atlas/brainrender/*",
    "*/neuralib/dashboard/*",
    "*/neuralib/persistence/*",
    "*/neuralib/tools/*",
    "*/neuralib/util/*"
]

[tool.coverage.report]
omit = [
    "*/neuralib/io/dataset/*",
    "*/neuralib/locomotion/*",
    "*/neuralib/segmentation/*",
    "*/neuralib/model/*",
    "*/neuralib/atlas/brainrender/*",
    "*/neuralib/dashboard/*",
    "*/neuralib/persistence/*",
    "*/neuralib/tools/*",
    "*/neuralib/util/*"
]

exclude_also = [
    '@overload',
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == \"__main__\":",
    "@abc.abstractmethod"
]

[tool.pytest.ini_options]
testpaths = ["test/unit"]


# -----------------------------------------------------------------------------
# Others
# -----------------------------------------------------------------------------

[project.urls]
Homepage = "https://github.com/ytsimon2004/neuralib"
Documentation = "https://neuralib.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/ytsimon2004/neuralib"
Issues = "https://github.com/ytsimon2004/neuralib/issues"


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project.scripts]
neuralib_brainrender = "neuralib.atlas.brainrender.main_app:main"
neuralib_widefield = "neuralib.imaging.widefield.main_app:main"