[project]
name = "neura-library"
version = "0.6.0"
requires-python = ">=3.11,<3.13"
description = "Utility tools for system neuroscience research, including Open Source Wrapper or Parser"
authors = [
    { name = "Yu-Ting Wei", email = "ytsimon2004@gmail.com" },
    { name = "Ta-Shun Su", email = "antoniost29@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["Neuroscience", "visual neuroscience", "cellular imaging", "brain mapping", "spatial navigation"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    'Intended Audience :: Science/Research',
    "Typing :: Typed",
]

# -----------------------------------------------------------------------------
# Installation
# -----------------------------------------------------------------------------


dependencies = [
    "attrs >= 25.3.0",
    "argclz >= 1.0.0",
    "colorama >= 0.4.6",
    "colorlog >= 6.9.0",
    "matplotlib >= 3.10.3",
    "matplotlib_venn >= 1.1.2",
    "seaborn >= 0.13.2",
    "numpy",
    "scipy >= 1.15.3",
    "scikit-image >= 0.25.2",
    "pandas",
    "polars",
    "pyarrow",
    "tifffile",
    "opencv-python>=4.8.0.76",
    "tqdm",
    "requests",
    'gdown',
    "rich",
    "h5py",
    "typing_extensions",
]


[project.optional-dependencies]

# -----------------------------------------------------------------------------
# As module name (isolated wrapper)
# -----------------------------------------------------------------------------

atlas = [
    "brainrender",
    'pynrrd',
    "openpyxl",
    "anytree",
    "plotly",
    "fastexcel"
]
scan = ["xmltodict", "aicspylibczi"]
imaging = [
    "sbxreader",
    "ruamel.yaml",
    "numba", # oasis dcnv batch processing
    "bokeh", # fft view
    "napari"  # align
]
imglib = ["pdf2image", "imageio"]


# -----------------------------------------------------------------------------
# As functionality (isolated wrapper)
# -----------------------------------------------------------------------------

rastermap = ["rastermap"]
cascade = ["tensorflow"]
segmentation = ["pyqt6", "pyqtgraph", "csbdeep", "roifile", "napari"]
stardist = ["neura-library[segmentation]", "stardist", "tensorflow", "numpy<2.0; extra == 'stardist'"]
opt = ["slackclient", "gspread", "psutil"]

#
all = [
    # as module
    "neura-library[atlas]",
    "neura-library[scan]",
    "neura-library[imaging]",
    "neura-library[imglib]",
    # as functionality
    "neura-library[rastermap]",
    "neura-library[opt]",
]

dev = [
    "neura-library[all]", "neura-library[stardist]",
    "pre-commit", "ruff", "pytest", "pytest-cov"
]

doc = [
    "neura-library[all]",
    #    "neura-library[stardist]",
    "neura-library[cascade]",
    "sphinx", "nbsphinx", "sphinx-toolbox", "sphinx-rtd-theme", "sphinx-prompt", "sphinx_copybutton"
]


[tool.pytest.ini_options]
testpaths = ["test/unit"]


# -----------------------------------------------------------------------------
# Others
# -----------------------------------------------------------------------------

[project.urls]
Homepage = "https://github.com/ytsimon2004/neuralib"
Documentation = "https://neuralib.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/ytsimon2004/neuralib"
Issues = "https://github.com/ytsimon2004/neuralib/issues"


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project.scripts]
neuralib_brainrender = "neuralib.atlas.brainrender.main_app:main"
neuralib_widefield = "neuralib.imaging.widefield.main_app:main"